# python_fb_tools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  README.md  README.txt  compile-xlate-msgs.sh  get-debian-release  get-rpm-release  get-rpm-version  pyproject.toml  requirements-2.7.txt  requirements-lint.txt  requirements.txt  rpm-addsign-wrapper.expect  setup.cfg  setup.py  template.spec  test.py-2.7.sh  test.py-3.5.sh  test.py-3.6.sh  test.rc  update-env.sh  xtract-xlate-msgs.sh  yamllint.yaml
.github-unused/workflows/: build-packages.yaml  packages.yaml
.github/workflows/: build-packages.yaml  packages.yaml  superlinter.yml
bin-build/: build-centos7-inner.sh  build-centos8-inner.sh  build-centos8.sh  changelog-deb2rpm.py  docker-script-centos8.sh
debian/: .gitignore  changelog  control  control-py3only  copyright  fb-tools.docs  rules  rules-py3only
docker/: resources-buster
docker/buster/: Dockerfile  entrypoint.sh
etc/: babel.ini  ddns.ini.default  get-vmware-vm-info.ini.default  vmware.ini.default
lib/fb_tools/: __init__.py  app.py  argparse_actions.py  cfg_app.py  cfg_converter.py  collections.py  colored.py  common.py  config.py  ddns_update_cfg.py  errors.py  get_file_rm_app.py  get_vm_app.py  get_vm_cfg.py  get_vm_hosts.py  get_vm_list_app.py  handling_obj.py  mailaddress.py  multi_config.py  my_ip_app.py  obj.py  pdns_bulk_rm_app.py  pdns_bulk_rm_cfg.py  pidfile.py  show_spinner_app.py  spinner.py  syslog_handler.py  unix_handler.py  vmware_app.py  vmware_config.py  xlate.py
locale/: fb_tools.pot
old-stuff/: requirements-test.txt
specs/: .gitignore  fb-tools.spec.template  fb_tools.1.3.7.spec  fb_tools.1.3.8.spec  fb_tools.1.3.9.spec  fb_tools.1.4.1.spec  fb_tools.el7.template.spec  fb_tools.el8.spec.template  fb_tools.el8.template.spec  fb_tools.spec  fb_tools.spec.template
src/fb_tools/: __init__.py  any_config.py  app.py  argparse_actions.py  cfg_app.py  cfg_converter.py  colcts.py  common.py  config.py  (+10 more)
test/: addresse-remove.txt  call_sleep.sh  config.yml  do_sleep  general.py  listener_thread.py  rrset-a-with-comment.js  rrset-a.js  rrset-mx.js  rrset-soa.js  status.update-ddns.home-uhu-banane.ddnss.org.yaml  test_00_errors.py  test_00_mailaddress.py  test_05_common.py  test_10_base_object.py  test_13_colcts.py  test_15_mailaddress.py  test_17_multicfg.py  test_18_pidfile.py  test_20_handling_object.py  test_25_ddns_update_status.py  test_30_base_handler.py  test_33_lock.py  test_35_sockets.py  test_36_unixsocket.py  test_37_tcpsocket.py  test_40_app_modules.py  test_50_spinner.py  test_base_handler.py  test_base_object.py  test_collections.py  test_colored.py  test_common.py  test_errors.py  test_handling_object.py  test_lock.py  test_multicfg.py  test_pdns.py  test_pidfile.py  test_syslog.py  (+2 more)
tests/: config.yml  general.py  listener_thread.py  test_00_errors.py  test_05_common.py  test_10_base_object.py  test_13_colcts.py  test_15_mailaddress.py  test_16_anycfg.py  test_17_multicfg.py  test_18_pidfile.py  test_20_handling_object.py  test_25_ddns_update_status.py  test_30_base_handler.py  test_35_sockets.py  test_36_unixsocket.py  test_37_tcpsocket.py  test_40_app_modules.py
(+92 files in other folders)
