[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fb_tools"
authors = [{name = "Frank Brehm", email = "frank@brehm-online.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "babel",
    "chardet",
    "click",
    "pytz",
    "PyYAML",
    "requests",
    "semver",
    "six",
    "fb_logging",
]

[project.urls]
Source = "https://github.com/fbrehm/python_fb_tools"

[tool.flit.module]
name = "fb_tools"

[tool.flit.external-data]
directory = "data"

[project.scripts]
get-file-to-remove = "fb_tools.application.get_file_rm:main"
myip = "fb_tools.application.myip:main"
show-spinner = "fb_tools.application.show_spinner:main"
update-ddns = "fb_tools.application.update_ddns:main"

[project.optional-dependencies]
development = [
    "black",
    "isort",
    "hjson",
]

lint = [
    "flake8",
    "pylint",
    "flake8-blind-except",
    "flake8-builtins",
    "flake8-bugbear",
    "flake8-class-newline",
    "flake8-comprehensions",
    "flake8-deprecated",
    "flake8-docstrings",
    "flake8-import-order"
]

testing = [
    "pytest >= 7.0.0, < 9.0.0",
    "requests_mock",
]

[tool.black]
line-length = 99
target-version = ["py39", "py310", "py311", "py312"]


# =============================================================================
# vim: fileencoding=utf-8 filetype=toml tabstop=4 expandtab shiftwidth=4 softtabstop=4 list
