[metadata]
name = fb_tools
description = Modules for common used objects, error classes and methods.
author = Frank Brehm
author_email = frank@brehm-online.com
url = https://github.com/fbrehm/python_fb_tools
license = LGPL3+
platforms = posix
provides = fb_tools
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =lib

install_requires =
    requests
    Babel

setup_requires =
    Babel

packages=find:

[options.packages.find]
where=lib

[pep8]

max-line-length = 99
